# SHAI

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SESSION_STATE.md  THREAT_MODEL.md  harness.yaml.example  pyproject.toml
.claude/skills/: 00-index.md  01-quickstart.md  02-harness-yaml.md  03-agent-yaml.md  04-boundaries.md  05-verdicts-events.md  12-testing.md  14-cli.md  adapters.md  agents.md  audit-schema.md  boundaries.md  candidates.md  cli.md  concurrency.md  connectors.md  harness-yaml.md  index.md  integrations.md  policy.md  quickstart.md  testing.md  tools-sources.md  verdicts-events.md
.github/: CODEOWNERS  mlc_config.json
.github/workflows/: ci.yml  cla.yml
config/: harness.yaml  harness.yaml.example
config/agents/: orchestrator_agent.yaml  research_agent.yaml
config/policies/: rules.yaml
docs/: 00-index.md  01-quickstart.md  02-harness-yaml.md  04-boundaries.md  10-connectivity.md  11-errors.md  adapters.md  agents.md  architecture.md  audit-schema.md  boundaries.md  cli.md  concepts.md  concurrency.md  configuration.md  connectivity.md  connectors.md  docs_boundaries.md  errors.md  integrations.md  policy.md  quickstart.md  sources.md  testing.md
examples/: connectors_demo.py  display.py  hand_rolled_loop.py  langchain_agent.py  langchain_agent_loop.py  langgraph_agent.py  quickstart.py  shai_demo.py  with_uma.py
examples/connectors/: agent.yaml  harness.yaml
harness/src/harness/: __init__.py
harness/src/harness/agents/: agent_config.py  registry.py
harness/src/harness/boundaries/: _scan.py  check_tool_call.py
harness/src/harness/config/: schema.py
harness/src/harness/core/: events.py  harness.py  types.py  verdicts.py
harness/src/harness/integrations/: anthropic_sdk.py  langchain.py  langgraph.py  pydantic_ai.py
harness/src/harness/policy/: engine.py  rules.py
harness/src/harness/tools/: source.py
harness/src/harness_cli/: main.py
harness/src/harness_cli/commands/: agents.py  audit.py  validate.py
harness/tests/: conftest.py
harness/tests/contracts/: test_agent_registry_contract.py  test_audit_sink_contract.py  test_discovery_contract.py  test_policy_contract.py  test_scanner_contract.py  test_tool_registry_contract.py  test_tool_sources_contract.py
harness/tests/fixtures/: harness.yaml
harness/tests/integration/: test_concurrent_agents.py  test_end_to_end_turn.py
harness/tests/perf/: test_boundary_perf.py
harness/tests/security/: test_audit_no_raw_text.py  test_dispatch_token.py
harness/tests/unit/: test_agent_registry.py  test_audit_signing.py  test_boundaries_check_tool_call.py  test_boundaries_scan.py  test_config_loader.py  test_config_schema.py  test_core_context.py  test_core_events.py  test_core_types.py  test_core_verdicts.py  test_facade_phase5.py  test_facade_phases1_3.py  test_integrations.py  test_rate_limiter.py  test_scan_tool_result.py  test_source_registry.py
logs/: audit.jsonl  connector-demo-audit.jsonl
signatures/: README.md
src/harness/: __init__.py
src/harness/adapters/: circuit_breaker.py  discovery.py
src/harness/adapters/audit_sinks/: file.py  stdout.py
src/harness/agents/: agent_config.py  registry.py
src/harness/audit/: emitter.py  redaction.py  sink.py
src/harness/boundaries/: _scan.py  check_tool_call.py  scan_input.py  scan_output.py  session_accumulator.py  session_budget.py
src/harness/config/: loader.py  resolution.py  schema.py
src/harness/connectivity/: __init__.py  config.py  token.py  transport.py
src/harness/connectors/: __init__.py
src/harness/core/: context.py  errors.py  events.py  harness.py  normalize.py  types.py  verdicts.py
src/harness/integrations/: anthropic_sdk.py  base.py  crewai.py  langchain.py  langgraph.py  openai_agents.py  pydantic_ai.py
src/harness/patterns/: fingerprint.py  store.py
src/harness/policy/: engine.py  rules.py
src/harness/tools/: registry.py  source.py  tool.py
src/harness_cli/: console.py  main.py
src/harness_cli/commands/: agents.py  audit.py  patterns.py  validate.py
state/: sessions.db
tests/: conftest.py  test_normalization_pipeline.py
tests/contracts/: conftest.py  test_agent_registry_contract.py  test_audit_sink_contract.py  test_discovery_contract.py  test_policy_contract.py  test_scanner_contract.py  test_secrets_contract.py  test_tool_registry_contract.py  test_tool_sources_contract.py
tests/fixtures/: harness.yaml
tests/fixtures/agents/: orchestrator_agent.yaml  research_agent.yaml
tests/integration/: langgraph.py  test_concurrent_agents.py  test_end_to_end_turn.py  test_from_yaml_mcp_source.py  test_normalization_pipeline.py
tests/perf/: test_boundary_perf.py  test_perf_budget.py
tests/security/: test_audit_no_raw_text.py  test_dispatch_token.py
tests/unit/: test_agent_config.py  test_agent_registry.py  test_argument_policy.py  test_audit_signing.py  test_boundaries_check_tool_call.py  test_boundaries_scan.py  test_cli.py  test_config_loader.py  test_config_schema.py  test_connectors.py  test_core_context.py  test_core_events.py  test_core_types.py  test_core_verdicts.py  test_dispatch_token.py  test_facade_phase5.py  test_facade_phases1_3.py  test_hardening_and_density.py  test_heuristic_candidates.py  test_identity_spoof_scan.py  test_integrations.py  test_items_5_to_7.py  test_jailbreak_scan.py  test_mcp_metadata_scanner.py  test_normalize.py  test_on_error_and_circuit_breaker.py  test_rate_limiter.py  test_scan_tool_result.py  test_session_accumulator.py  test_session_budget.py  test_shai_transport.py  test_source_registry.py  test_turn_signals.py
(+49 files in other folders)
