[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shai"
version = "0.1.0"
description = "Secure Harness AI — control-plane SDK for production agents"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/harness", "src/harness_cli"]
# Include bundled YAML pattern catalogs and the py.typed marker
artifacts = [
    "src/harness/adapters/scanners/*.yaml",
    "src/harness/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "LICENSE",
    "README.md",
    "ARCHITECTURE.md",
    "harness.yaml.example",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
shai = "harness_cli.main:main"

[project.entry-points."harness.scanners"]
regex_pii      = "harness.adapters.scanners.regex_pii:RegexPIIScanner"
injection_scan = "harness.adapters.scanners.injection_scan:InjectionScanner"

[project.entry-points."harness.policy"]
rules = "harness.policy.rules:RuleBasedPolicy"

[project.entry-points."harness.audit_sinks"]
stdout = "harness.adapters.audit_sinks.stdout:StdoutSink"
file   = "harness.adapters.audit_sinks.file:FileSink"

[project.entry-points."harness.sources"]
local = "harness.tools.source:LocalSource"
skill = "harness.tools.source:SkillSource"
mcp   = "harness.tools.source:MCPSource"

[project.entry-points."harness.secrets"]
env = "harness.adapters.secrets.env:EnvVarProvider"
