[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shai"
version = "0.1.0"
description = "Secure Harness AI — control-plane SDK for production agents"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "bandit",
    "pip-audit",
    "ruff",
    "pre-commit",
    "pip-tools",
    "cyclonedx-bom",
    "python-semantic-release",
    "sigstore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/harness", "src/harness_cli"]
# Include bundled YAML pattern catalogs and the py.typed marker
artifacts = [
    "src/harness/adapters/scanners/*.yaml",
    "src/harness/adapters/scanners/l10n/*.yaml",
    "src/harness/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "LICENSE",
    "NOTICE",
    "README.md",
    "ARCHITECTURE.md",
    "CLA.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "harness.yaml.example",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[project.scripts]
shai = "harness_cli.main:main"

[project.entry-points."harness.scanners"]
regex_pii       = "harness.adapters.scanners.regex_pii:RegexPIIScanner"
injection_scan  = "harness.adapters.scanners.injection_scan:InjectionScanner"
heuristic_scan  = "harness.adapters.scanners.heuristic_scan:HeuristicScanner"
jailbreak_scan     = "harness.adapters.scanners.jailbreak_scan:JailbreakScanner"
identity_spoof_scan = "harness.adapters.scanners.identity_spoof_scan:IdentitySpoofScanner"

[project.entry-points."harness.policy"]
rules = "harness.policy.rules:RuleBasedPolicy"

[project.entry-points."harness.audit_sinks"]
stdout = "harness.adapters.audit_sinks.stdout:StdoutSink"
file   = "harness.adapters.audit_sinks.file:FileSink"

[project.entry-points."harness.sources"]
local = "harness.tools.source:LocalSource"
skill = "harness.tools.source:SkillSource"
mcp   = "harness.tools.source:MCPSource"

[project.entry-points."harness.secrets"]
env = "harness.adapters.secrets.env:EnvVarProvider"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
commit_message = "chore(release): {version}"
changelog_file = "CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "E402",
    "E702",
    "E741",
    "F841",
    "B007",
    "B017",
    "B023",
    "B905",
    "SIM102",
    "SIM105",
    "SIM115",
    "F811",
]